# total-perspective-vortex

./: .gitignore  README.md  config.json  main.py  pyproject.toml  settings.py  setup.sh  total-perspective-vortex.py  utils.py
docs/: Bonus.md  SCORE_EXPLANATION.md  plan-totalPerspectiveVortex.prompt.md
src/: app_model.py  csp.py  eeg.py  egg.py  main_controller.py  main_view.py  settings.py  train.py
