[build-system]
requires = [
    "setuptools>=80.9.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "total-perspective-vortex"
version = "1.0.0"
authors = [
    {name = "Cyril BATTISTOLO", email = "cybattis@student.42lyon.fr"}
]
description = "A Python project utilizing scikit-learn and MNE for machine learning tasks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "scikit-learn==1.7.2",
    "mne==1.11.0",
    "numpy==2.2.6",
    "pandas==2.3.3",
    "matplotlib==3.10.7",
    "sv-ttk==2.6.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1",
    "black>=25.11.0",
    "flake8>=7.3.0"
]

[tool.setuptools]
py-modules = []